# MODULAR-RAG-MCP-SERVER

./: .gitignore  DEV_SPEC.md  README.md  main.py  pyproject.toml  requirements.txt  sitecustomize.py
config/: settings.yaml
config/prompts/: chunk_refinement.txt  image_captioning.txt  rerank.txt
core/: __init__.py
docs/: INTERVIEW_NOTES.md
ingestion/: __init__.py
libs/: __init__.py
mcp_server/: __init__.py
observability/: __init__.py
scripts/: bootstrap_venv.sh  evaluate.py  generate_test_pdfs.py  ingest.py  query.py  sitecustomize.py  start_dashboard.py  verify_phase.sh
src/core/: __init__.py  settings.py  types.py
src/ingestion/: __init__.py  document_manager.py  pipeline.py
src/libs/: __init__.py
src/mcp_server/: __init__.py  protocol_handler.py  server.py
src/observability/: logger.py
tests/e2e/: test_dashboard_smoke.py  test_data_ingestion.py  test_mcp_client.py  test_query_cli.py  test_recall.py
tests/fixtures/: golden_test_set.json  noisy_chunks.json
tests/integration/: test_chroma_store_roundtrip.py  test_chunk_refiner_llm.py  test_hybrid_search.py  test_ingestion_pipeline.py  test_mcp_server.py
tests/unit/: manual_validation_c3_c4.py  test_azure_vision_llm.py  test_batch_processor.py  test_bm25_indexer_roundtrip.py  test_chunk_refiner.py  test_composite_evaluator.py  test_config_loading.py  test_core_types.py  test_cross_encoder_reranker.py  test_custom_evaluator.py  test_dense_encoder.py  test_dense_retriever.py  test_document_chunker.py  test_document_manager.py  test_embedding_factory.py  test_embedding_providers_smoke.py  (+30 more)
(+91 files in other folders)
